added bootstrap locally submitted login page using bootstrap

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,8 +3,10 @@
     <head>
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <title>Изучение языка программирование Python</title>
+        <link rel="stylesheet" href="/static/css/bootstrap.css">
     </head>
     <body>
         {% block body %}{% endblock %}
+        <script src="/static/js/bootstrap.js"></script>
     </body>
 </html>
