--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
-    <head>
-        <meta name="viewport" content="initial-scale=1, width=device-width">
-        <title>Изучение языка программирование Python</title>
-        <link rel="stylesheet" href="/static/css/bootstrap.css">
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-        <script src="/static/js/bootstrap.js"></script>
-    </body>
+
+<head>
+    <meta name="viewport" content="initial-scale=1, width=device-width">
+    <title>Изучение языка программирование Python</title>
+    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <script src="/static/js/jquery-3.7.1.min.js"></script>
+    <!-- Использован Bootstrap 4.6, потому что в пятом некоторые функции не заработали -->
+    <script src="/static/js/bootstrap.bundle.min.js"></script>
+</head>
+
+<body>
+    {% block body %}{% endblock %}
+</body>
+
 </html>
