minor visual changes

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,6 @@
 
 {% block body %}
 
-Hello, {% if name %}{{ name }}{% else %}world{% endif %}
+<p>Hello, {% if name %}{{ name }}{% else %}world{% endif %}</p>
 
 {% endblock %}
