--- a/templates/course1.html
+++ b/templates/course1.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-Hello, {% if name %}{{ name }}{% else %}world{% endif %}
-Это курс 1
+<p>Hello, {% if name %}{{ name }}{% else %}world{% endif %}</p>
+<p>Это курс 1</p>
 
 {% endblock %}
