--- a/templates/course2.html
+++ b/templates/course2.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-Hello, {% if name %}{{ name }}{% else %}world{% endif %}
-Это курс 2
+<p>Hello, {% if name %}{{ name }}{% else %}world{% endif %}</p>
+<p>Это курс 2</p>
 
 {% endblock %}
