--- a/templates/course3.html
+++ b/templates/course3.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-Hello, {% if name %}{{ name }}{% else %}world{% endif %}
-Это курс 3
+<p>Hello, {% if name %}{{ name }}{% else %}world{% endif %}</p>
+<p>Это курс 3</p>
 
 {% endblock %}
