--- a/templates/course4.html
+++ b/templates/course4.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-Hello, {% if name %}{{ name }}{% else %}world{% endif %}
-Это курс 4
+<p>Hello, {% if name %}{{ name }}{% else %}world{% endif %}</p>
+<p>Это курс 4</p>
 
 {% endblock %}
