--- a/templates/course5.html
+++ b/templates/course5.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-Hello, {% if name %}{{ name }}{% else %}world{% endif %}
-Это курс 5
+<p>Hello, {% if name %}{{ name }}{% else %}world{% endif %}</p>
+<p>Это курс 5</p>
 
 {% endblock %}
