--- a/templates/users.html
+++ b/templates/users.html
@@ -3,7 +3,7 @@
 {% block body %} 
 
     <h1>Список пользователей</h1>
-    <table>
+    <table class="table-striped">
         <thead>
             <tr>
                 <th>Логин</th>
