--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block body %}
-
+{% if not name %}
 <div class="container md">
     <div class="row">
         <div class="col-md-1"></div>
@@ -14,25 +14,44 @@
 
                     <!-- Email input -->
                     <div data-mdb-input-init class="form-outline mb-4">
-                        <input type="text" id="loginName" class="form-control" name="loginName"/>
+                        <input type="text" id="loginName" class="form-control" name="loginName" />
                         <label class="form-label" for="loginName">Введите своё имя</label>
                     </div>
 
                     <!-- Password input -->
                     <div data-mdb-input-init class="form-outline mb-4">
-                        <input type="password" id="loginPassword" class="form-control" name="loginPassword"/>
+                        <input type="password" id="loginPassword" class="form-control" name="loginPassword" />
                         <label class="form-label" for="loginPassword">Введите пароль</label>
                     </div>
 
                     <!-- Submit button -->
+                    <input type="hidden" name="loginAction" value="1"/>
                     <button type="submit" data-mdb-button-init data-mdb-ripple-init
                         class="btn btn-primary btn-block mb-4">Войдите
                     </button>
                 </form>
             </div>
-            <div class="col-md-1"></div>
         </div>
+        <div class="col-md-1"></div>
     </div>
-
-
-    {% endblock %}
+</div>
+{% else %}
+<div class="container md">
+    <div class="row">
+        <div class="col-md-1"></div>
+        <div class="col-md-6">
+            <div class="tab-pane fade show active" id="pills-logout" role="tabpanel" aria-labelledby="tab-logout">
+                <form action="/login" method="POST">
+                    <!-- Submit button -->
+                    <input type="hidden" name="loginAction" value="0"/>
+                    <button type="submit" data-mdb-button-init data-mdb-ripple-init
+                        class="btn btn-primary btn-block mb-4">Завершите работу
+                    </button>
+                </form>
+            </div>
+        </div>
+        <div class="col-md-1"></div>
+    </div>
+</div>
+{% endif %}
+{% endblock %}
