--- a/templates/test.html
+++ b/templates/test.html
@@ -5,9 +5,10 @@
 <script src="/static/js/bootstrap.bundle.min.js"></script>
 <!-- Получите корректное выпадающее меню. -->
 <div class="dropdown">
- <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Меню</button>
- <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
- <a class="dropdown-item" href="#">Пункт 1</a>
- <a class="dropdown-item" href="#">Пункт 2</a>
- </div>
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">Меню</button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#">Пункт 1</a>
+        <a class="dropdown-item" href="#">Пункт 2</a>
+    </div>
 </div>
