--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,6 @@
 
 {% block body %}
 
-<p>Hello, {% if name %}{{ name }}{% else %}world{% endif %}</p>
+<p>Hello, {% if session.get("name") %}{{ session.get("name") }}{% else %}world{% endif %}</p>
 
 {% endblock %}
