--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,68 +2,75 @@
 <html lang="ru">
 
 <head>
-    <meta name="viewport" content="initial-scale=1, width=device-width">
-    <title>Изучение языка программирования Python</title>
-    <link rel="stylesheet" href="/static/css/bootstrap.min.css">
-    <script src="/static/js/jquery-3.7.1.min.js"></script>
-    <!-- Использован Bootstrap 4.6, потому что в пятом некоторые функции не заработали -->
-    <script src="/static/js/bootstrap.bundle.min.js"></script>
+  <meta name="viewport" content="initial-scale=1, width=device-width">
+  <title>Изучение языка программирования Python</title>
+  <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+  <script src="/static/js/jquery-3.7.1.min.js"></script>
+  <!-- Использован Bootstrap 4.6, потому что в пятом некоторые функции не заработали -->
+  <script src="/static/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
-    <div class="container-md">
-        <div class="head text-center bg-light">
-            Изучение языка программирования Python
-        </div>
-        <div class="row">
-            <div class="col-md-4">
-                <nav id="sidebarMenu" class="d-md-block bg-light sidebar collapse">
-                    <div class="sidebar-sticky pt-3">
-                      <ul class="nav flex-column">
-                        <li class="nav-item">
-                          <a class="nav-link" href="/">
-                            Начало
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="/course1">
-                            Курс 1
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="/course2">
-                            Курс 2
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="/course3">
-                            Курс 3
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="/course4">
-                            Курс 4
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="/course5">
-                            Курс 5
-                          </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/login">
-                              Мои данные
-                            </a>
-                          </li>
-                      </ul>
-                    </div>
-                </nav>
-            </div>
-            <div class="col-md-8">
-                {% block body %}{% endblock %}
-            </div>
-        </div>
+  <div class="container-md">
+    <div class="head text-center bg-light">
+      Изучение языка программирования Python
     </div>
+    <div class="row">
+      <div class="col-md-4">
+        <nav id="sidebarMenu" class="d-md-block bg-light sidebar collapse">
+          <div class="sidebar-sticky pt-3">
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link" href="/">
+                  Начало
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/course1">
+                  Курс 1
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/course2">
+                  Курс 2
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/course3">
+                  Курс 3
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/course4">
+                  Курс 4
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/course5">
+                  Курс 5
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/login">
+                  Мои данные
+                </a>
+              </li>
+              {% if session.get("name") == 'test' %}
+              <li class="nav-item">
+                <a class="nav-link" href="/register">
+                  Зарегистрировать пользователя
+                </a>
+              </li>
+              {% endif %}
+            </ul>
+          </div>
+        </nav>
+      </div>
+      <div class="col-md-8">
+        {% block body %}{% endblock %}
+      </div>
+    </div>
+  </div>
 
 </body>
 
