--- a/templates/layout.html
+++ b/templates/layout.html
@@ -55,7 +55,7 @@
                   Мои данные
                 </a>
               </li>
-              {% if session.get("name") == 'test' %}
+              {% if session.get("role") == 'Администратор' %}
               <li class="nav-item">
                 <a class="nav-link" href="/register">
                   Зарегистрировать пользователя
