show on page depending on session role

--- a/templates/course2.html
+++ b/templates/course2.html
@@ -4,5 +4,14 @@
 
 <p>Hello, {% if session.get("name") %}{{ session.get("name") }}{% else %}world{% endif %}</p>
 <p>Это курс 2</p>
+<p>Здесь отображается общая часть для всех</p>
+
+{% if not session.get("role") %}
+    <p>Ничего не отображается</p>    
+{% elif session.get("role") == 'Учащийся' %}
+    <p>Здесь отображается только часть для учащегося</p>
+{% else %}
+    <p>Здесь отображается часть для учителя и администратора</p>
+{% endif %}
 
 {% endblock %}
