--- a/templates/layout.html
+++ b/templates/layout.html
@@ -61,6 +61,11 @@
                   Зарегистрировать пользователя
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/users">
+                  Список пользователей
+                </a>
+              </li>
               {% endif %}
             </ul>
           </div>
