--- a/templates/layout.html
+++ b/templates/layout.html
@@ -25,6 +25,7 @@
                   Начало
                 </a>
               </li>
+              {% if session.get("role") %}
               <li class="nav-item">
                 <a class="nav-link" href="/course1">
                   Курс 1
@@ -50,6 +51,7 @@
                   Курс 5
                 </a>
               </li>
+              {% endif %}
               <li class="nav-item">
                 <a class="nav-link" href="/login">
                   Мои данные
