added user update

--- a/templates/users.html
+++ b/templates/users.html
@@ -1,23 +1,25 @@
 {% extends "layout.html" %}
 
-{% block body %} 
+{% block body %}
 
-    <h1>Список пользователей</h1>
-    <table class="table-striped">
+<h1>Список пользователей</h1>
+<div class="col-md-12">
+    <table class="table-striped" width="100%">
         <thead>
             <tr>
-                <th>Логин</th>
-                <th>Роль</th>
+                <th scope="col">Логин</th>
+                <th scope="col">Роль</th>
             </tr>
         </thead>
         <tbody>
             {% for user in users %}
-                <tr>
-                    <td>{{ user[0] }}</td>
-                    <td>{{ user[1] }}</td>                    
-                </tr>
+            <tr>
+                <td>{{ user[0] }}</td>
+                <td>{{ user[1] }}</td>
+            </tr>
             {% endfor %}
         </tbody>
     </table>
+</div>
 
 {% endblock %}
