added index page content

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,13 @@
 
 {% block body %}
 
-<p>Hello, {% if session.get("name") %}{{ session.get("name") }}{% else %}world{% endif %}</p>
+<p>На этом сайте предоставлены учебные материалы по курсу "Начала программирования на языке Python" для учащихся 8-9
+    классов. После авторизации вам будет доступен для просмотра учебный материал по теме, а также тесты для контроля
+    знаний.</p>
+
+<h3>Общие сведения о языке программирования Python</h3>
+<p>Python — язык программирования высокого уровня, предназначенный для решения самого широкого круга задач.
+    С его помощью можно обрабатывать различные данные, проводить математические вычисления, создавать изображения,
+    работать с базами данных, разрабатывать веб-сайты.</p>
 
 {% endblock %}
