sticky navbar, content for course 1

--- a/templates/course1.html
+++ b/templates/course1.html
@@ -2,16 +2,207 @@
 
 {% block body %}
 
-<p>Hello, {% if session.get("name") %}{{ session.get("name") }}{% else %}world{% endif %}</p>
-<p>Это курс 1</p>
-<p>Здесь отображается общая часть для всех</p>
+<h4>Алфавит и словарь языка</h4>
+<p>Основой языка программирования Python, как и любого другого языка, является алфавит — набор допустимых символов,
+    которые можно использовать для записи программы. Это:</p>
+<ul>
+    <li>латинские прописные и строчные буквы (A, B, C, ..., X, Y, Z, a, b, c, ..., x, y, z);</li>
+    <li>арабские цифры (0, 1, 2, ..., 7, 8, 9);</li>
+    <li>специальные символы (знак подчёркивания; круглые, квадратные скобки; знаки арифметических операций; # — знак
+        начала однострочного комментария и др.).</li>
+</ul>
 
-{% if not session.get("role") %}
-    <p>Ничего не отображается</p>    
+<p>В качестве неделимых элементов (составных символов) рассматриваются следующие последовательности символов:
+    &gt;=, &lt;=, !=, """ или ' ' ' (утроенные двойные или одинарные кавычки, ставящиеся в начале и в
+    конце многострочного комментария).</p>
+<p>В языке также существует некоторое количество различных цепочек символов, рассматриваемых как единые смысловые
+    элементы с фиксированным значением. Такие цепочки символов называются служебными словами.</p>
+
+<table class="table-striped" width="100%">
+    <thead>
+        <tr>
+            <th scope="col">Служебное слово языка Python</th>
+            <th scope="col">Значение служебного слова</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>and</td>
+            <td>и</td>
+        </tr>
+        <tr>
+            <td>break</td>
+            <td>прервать</td>
+        </tr>
+        <tr>
+            <td>elif</td>
+            <td>иначе если</td>
+        </tr>
+        <tr>
+            <td>else</td>
+            <td>иначе</td>
+        </tr>
+        <tr>
+            <td>False</td>
+            <td>ложь</td>
+        </tr>
+        <tr>
+            <td>float</td>
+            <td>вещественный тип данных (с плавающей точкой)</td>
+        </tr>
+        <tr>
+            <td>for</td>
+            <td>для</td>
+        </tr>
+        <tr>
+            <td>if</td>
+            <td>если</td>
+        </tr>
+        <tr>
+            <td>input</td>
+            <td>ввод</td>
+        </tr>
+        <tr>
+            <td>integer</td>
+            <td>целый</td>
+        </tr>
+        <tr>
+            <td>list</td>
+            <td>список</td>
+        </tr>
+        <tr>
+            <td>not</td>
+            <td>не</td>
+        </tr>
+        <tr>
+            <td>or</td>
+            <td>или</td>
+        </tr>
+        <tr>
+            <td>print</td>
+            <td>печать</td>
+        </tr>
+        <tr>
+            <td>string</td>
+            <td>строковый тип данных (цепочка символов)</td>
+        </tr>
+        <tr>
+            <td>True</td>
+            <td>истина</td>
+        </tr>
+        <tr>
+            <td>while</td>
+            <td>пока</td>
+        </tr>
+    </tbody>
+</table>
+<br>
+
+<h4>Типы данных, используемые в языке Python</h4>
+
+<table class="table-striped" width="100%">
+    <thead>
+        <tr>
+            <th scope="col">Название</th>
+            <th scope="col">Обозначение</th>
+            <th scope="col">Допустимые значения</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>Целочисленный</td>
+            <td>int (integer)</td>
+            <td>Сколь угодно большие, размер ограничен оперативной памятью</td>
+        </tr>
+        <tr>
+            <td>Вещественный</td>
+            <td>float</td>
+            <td>Любые числа с дробной частью</td>
+        </tr>
+        <tr>
+            <td>Строковый</td>
+            <td>str (string)</td>
+            <td>Любые последовательности символов из таблицы Unicode</td>
+        </tr>
+        <tr>
+            <td>Логический</td>
+            <td>bool (boolean)</td>
+            <td>False и True</td>
+        </tr>
+    </tbody>
+</table>
+<br>
+<p>В вещественном числе целая часть от дробной отделяется точкой, при этом перед точкой и после неё должно быть, по
+    крайней мере, по одной цифре. Пробелы внутри числа недопустимы. Произвольный набор символов, заключённый в одинарные
+    или двойные кавычки, считается строковой величиной (строкой). Строка может содержать любые символы, набираемые на
+    клавиатуре, в том числе буквы национальных алфавитов.</p>
+<p>В отличие от многих других языков программирования переменные в языке Python не нужно объявлять. Тип переменной
+    определяется автоматически в тот момент, когда ей присваивается новое значение. Тип каждой переменной может
+    динамически изменяться по ходу выполнения программы. Определить, какой тип имеет переменная в текущий момент, можно
+    с помощью функции (команды) type().</p>
+
+<h4>Режимы работы интерпретатора Python</h4>
+<p>Интерпретатор Python может работать в двух режимах:</p>
+<ul>
+    <li>через командную строку (в командном, или интерактивном режиме), когда каждая введённая команда сразу
+        выполняется;</li>
+    <li>в программном режиме, когда программа сначала записывается в файл (обычно имеющий расширение .ру) и при запуске
+        выполняется целиком.</li>
+</ul>
+<p>Для вывода на экран последовательности символов (текста, надписи) используется встроенная команда print.
+    Последовательность символов, которые должны быть выведены на экран, заключается в двойные кавычки и записывается в
+    круглых скобках. Вместо двойных кавычек можно использовать одинарные кавычки. В начале строки (левее команды
+    print() ) не должно быть пробелов — таково требование языка Python.</p>
+
+<h4>Оператор присваивания</h4>
+<p>Программа на языке программирования представляет собой последовательность операторов (инструкций, команд). Оператор —
+    языковая конструкция, представляющая один шаг из последовательности действий или набор описаний. Запись значения в
+    переменную выполняет оператор присваивания.</p>
+<p>В правой части оператора присваивания нельзя указывать переменные, которые не были заранее созданы (определены). Так,
+    для переменных с и d все входящие в соответствующие выражения переменные были заданы выше. Последняя строка содержит
+    ошибку, так как переменная х из правой части ранее не была создана (определена).</p>
+<p>В языке Python разрешено множественное присваивание. Запись a, b = 19, 25 равносильна паре операторов присваивания a
+    = 19, b = 25.</p>
+<p>При этом считается, что эти два действия происходят параллельно, т. е. одновременно. Если двум переменным
+    присваивается одно и то же значение, можно применить множественное присваивание «по цепочке»: a = b = 5.</p>
+<p>В языке Python можно использовать сокращённую запись арифметических операций.</p>
+
+<table class="table-striped" width="100%">
+    <thead>
+        <tr>
+            <th scope="col">Сокращённая запись</th>
+            <th scope="col">Полная запись</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>a += b</td>
+            <td>a = a + b</td>
+        </tr>
+        <tr>
+            <td>a -= b</td>
+            <td>a = a - b</td>
+        </tr>
+        <tr>
+            <td>a *= b</td>
+            <td>a = a * b</td>
+        </tr>
+        <tr>
+            <td>a /= b</td>
+            <td>a = a / b</td>
+        </tr>
+        <tr>
+            <td>a **= 2</td>
+            <td>a = a ** 2</td>
+        </tr>
+    </tbody>
+</table>
+
+{% if not session.get("role") %} <p>Ничего не отображается</p>
 {% elif session.get("role") == 'Учащийся' %}
-    <p>Здесь отображается только часть для учащегося</p>
+<p>Здесь отображается только часть для учащегося</p>
 {% else %}
-    <p>Здесь отображается часть для учителя и администратора</p>
+<p>Здесь отображается часть для учителя и администратора</p>
 {% endif %}
 
 {% endblock %}
