--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="initial-scale=1, width=device-width">
-  <title>Изучение языка программирования Python</title>
+  <title>Начала программирования на языке Python</title>
   <link rel="stylesheet" href="/static/css/bootstrap.min.css">
   <script src="/static/js/jquery-3.7.1.min.js"></script>
   <!-- Использован Bootstrap 4.6, потому что в пятом некоторые функции не заработали -->
@@ -13,11 +13,11 @@
 <body>
   <div class="container-md">
     <div class="head text-center bg-light">
-      Изучение языка программирования Python
+      Начала программирования на языке Python
     </div>
     <div class="row">
       <div class="col-md-4">
-        <nav id="sidebarMenu" class="d-md-block bg-light sidebar collapse">
+        <nav id="sidebarMenu" class="d-md-block bg-light sidebar collapse sticky-top">
           <div class="sidebar-sticky pt-3">
             <ul class="nav flex-column">
               <li class="nav-item">
@@ -28,7 +28,7 @@
               {% if session.get("role") %}
               <li class="nav-item">
                 <a class="nav-link" href="/course1">
-                  Курс 1
+                  Общие сведения о языке
                 </a>
               </li>
               <li class="nav-item">
