added course 2 content

--- a/templates/course2.html
+++ b/templates/course2.html
@@ -2,16 +2,162 @@
 
 {% block body %}
 
-<p>Hello, {% if session.get("name") %}{{ session.get("name") }}{% else %}world{% endif %}</p>
-<p>Это курс 2</p>
-<p>Здесь отображается общая часть для всех</p>
+<h4>Вывод данных</h4>
+<p>Для вывода данных из оперативной памяти на экран компьютера используется оператор (функция) вывода print(): print
+    (&lt;Выражение 1&gt;,&lt;Выражение 2&gt;,…,&lt;Выражение N&gt;)</p>
+<p>Пример. Оператор print ('s=', s) выполняется так:</p>
+<ol>
+    <li>на экран выводятся символы, заключённые в одинарные кавычки: s =</li>
+    <li>на экран выводится значение переменной с именем s.</li>
+</ol>
+<p>Обратите внимание: по умолчанию выводимые выражения разделяются одним пробелом, иначе говоря, разделителем между ними
+    является пробел. Оператор print() вставляет между выводимыми значениями так называемый разделитель. Мы можем его
+    изменять, указывая новый разделитель после слова sep.</p>
+
+<table class="table-striped" width="100%">
+    <thead>
+        <tr>
+            <th scope="col">Вариант организации вывода</th>
+            <th scope="col">Оператор (функция) вывода</th>
+            <th scope="col">Результат</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>По умолчанию</td>
+            <td>print(1, 20, 300)</td>
+            <td>1 20 300</td>
+        </tr>
+        <tr>
+            <td>Убрать разделители-пробелы</td>
+            <td>print(1, 20, 300, sep='')</td>
+            <td>120300</td>
+        </tr>
+        <tr>
+            <td>Добавить разделитель-запятую</td>
+            <td>print(1, 20, 300, sep=', ')</td>
+            <td>1, 20, 300</td>
+        </tr>
+        <tr>
+            <td>Вывод каждого значения с новой строки</td>
+            <td>print(1, 20, 300, sep='\n')</td>
+            <td>1<br>20<br>300</td>
+        </tr>
+    </tbody>
+</table>
+<br>
+
+<p>Предположим, что мы работаем с натуральными числами, каждое из которых меньше 100. Тогда на одно число на экране
+    достаточно выделить 3 позиции: две позиции на запись самого числа и ещё одну позицию на пробел слева, разделяющий
+    числа.</p>
+<p>Записывается это так: print("{:3}{:3}{:3}".format(a, b, c))</p>
+<p>Для вывода вещественного числа в списке вывода для каждого выражения указываются два параметра:</p>
+<ol>
+    <li>общее количество позиций, отводимых на число; </li>
+    <li>количество позиций в дробной части числа:</li>
+    <ul>
+        <li>d — целые числа (int); </li>
+        <li>f — вещественные (float); </li>
+        <li>e — экспоненциальный формат. </li>
+    </ul>
+</ol>
+
+<table class="table-striped" width="100%">
+    <thead>
+        <tr>
+            <th scope="col">Фрагмент программы</th>
+            <th scope="col">Результат выполнения оператора вывода</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td>a = 4<br> print("a=", "{:5d}{:5d}".format(a, a * a))</td>
+            <td>a=&nbsp;&nbsp;&nbsp;&nbsp;4&nbsp;&nbsp;&nbsp;&nbsp;16</td>
+        </tr>
+        <tr>
+            <td>a = 1 / 3<br>b = 1 / 9<br>print("{:7.3f}{:7.4f}".format(a, b))</td>
+            <td>&nbsp;&nbsp;0.333 &nbsp;0.1111</td>
+        </tr>
+        <tr>
+            <td>a = 1 / 3<br>print("{:10.3e}".format(a))</td>
+            <td>&nbsp;3.333e-01</td>
+        </tr>
+    </tbody>
+</table>
+<br>
+<p>При выполнении очередного оператора print () по умолчанию вывод продолжается в новой строке. Чтобы убрать переход к
+    новой строке, используется параметр end:</p>
+<pre>
+    <code>
+        print(a, end="") # убран переход на новую строку
+        print(b)
+    </code>
+</pre>
+
+<h4>Ввод данных с клавиатуры</h4>
+<p>Для ввода в оперативную память значений переменных используется оператор (функция) ввода input () (от англ, input —
+    ввод): a = input()</p>
+<p>Пара скобок говорит о том, что мы вызываем функцию. Их надо писать обязательно, даже если в скобках ничего нет. При
+    выполнении этой команды программа ожидает от пользователя ввода последовательности символов с клавиатуры; после
+    того, как пользователь нажимает клавишу Enter, набранная им символьная строка записывается в переменную с именем а.
+    Это значит, что в памяти выделяется область необходимого размера, с ней связывается имя а, и в этой области
+    сохраняются все полученные символы. Если мы планируем работать не со строками, а с числами, то сразу же после
+    считывания необходимо выполнить преобразование типов при помощи соответствующей функции:</p>
+<ul>
+    <li>a = int (a) — для целых чисел; </li>
+    <li>a = float (a) — для вещественных чисел.</li>
+</ul>
+<p>Считывание строк и преобразование типов рекомендуется объединять:</p>
+<ul>
+    <li>a = int (input ()) — для целых чисел;</li>
+    <li>a = float (input () ) — для вещественных чисел.</li>
+</ul>
+<p>Экспериментально убедитесь в истинности утверждения: «Функции int() и float() работают без ошибок, если введённая
+    строка состоит только из цифр». Можно совмещать вывод подсказки и ввод данных, указывая текст подсказки в скобках
+    как аргумент функции input():</p>
+<pre>
+    <code>
+        r = float(input('Введите радиус '))
+    </code>
+</pre>
+<p>Каждый оператор ввода input() захватывает только одну строку данных, причем захватывает её целиком. Для того, чтобы
+    ввести в одной строке два целых числа, разделённых пробелом (например, 10 20), используют функцию split() (от англ.
+    split — расщепить). Можно воспользоваться следующей последовательностью команд:</p>
+<pre>
+    <code>
+        a, b = input().split() # Ввод двух строковых величин, разделённых пробелом
+        a, b = int(a), int(b) # Преобразование к целому типу
+    </code>
+</pre>
+<p>Теперь рассмотрим ситуацию, когда входные данные заданы в одной строке, но разделены особыми разделителями, отличными
+    от пробела. Типичным примером таких входных данных являются показания времени (10:33). В таких случаях надо для
+    split() указывать конкретный символ разделителя, взятый в двойные или одинарные кавычки.</p>
+<p>В нашем примере: hours, minutes = input().split (':')</p>
+<p>Аналогично организуется считывание трёх и более переменных: a, b, c = input().split() </p>
+<p>Для преобразования к целому типу переменных a, b, c можно использовать конструкцию: a, b, c = int(a), int(b), int (c)
+</p>
+<p>Сократить запись считывания нескольких значений и их преобразования в числовой тип можно с помощью функции тар,
+    которая применяет к каждому элементу списка заданное правило. a, b, c = map(int, input().split()) Здесь с помощью
+    функции тар организовано применение функции int() к каждому элементу вводимого списка. Усовершенствуем программу 1,
+    организовав в ней ввод данных с помощью оператора input (), включив строку с приглашением для ввода: </p>
+<pre>
+    <code>
+        # Программа 2 
+        r = float(input('Введите радиус:'))
+        c = 2 * 3.14 * r
+        s = 3.14 * r ** 2 
+        print("r=", "{:7.4f}".format(c))   
+        print("s=", "{:7.4f}".format(s))
+    </code>
+</pre>
+
 
 {% if not session.get("role") %}
-    <p>Ничего не отображается</p>    
+<p>Ничего не отображается</p>
 {% elif session.get("role") == 'Учащийся' %}
-    <p>Здесь отображается только часть для учащегося</p>
+<p>Здесь отображается только часть для учащегося</p>
 {% else %}
-    <p>Здесь отображается часть для учителя и администратора</p>
+<p>Здесь отображается часть для учителя и администратора</p>
 {% endif %}
 
 {% endblock %}
