--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,7 +33,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/course2">
-                  Курс 2
+                  Организация ввода и вывода данных
                 </a>
               </li>
               <li class="nav-item">
